--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,10 @@
 .container {
   padding: 0 2rem;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .main {
